YUK-10778 Update Tomcat to latest version
Updated Tomcat to 7.0.27 and update Eclipse environment to use standard web application startup.